2009-07-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/hd-notification-manager.c
	(hd_notification_manager_setup_interface): New function to set up the
	D-Bus proxy.
	(hd_notification_manager_init): Connect to the system bus as well and
	provide the interface there also.

2009-07-07  Aapo Kojo <aapo.kojo@nokia.com>

	Released 0.3.38

	* configure.ac: 0.3.38

2009-07-02  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#123987 - Fix plural localization of notification time

	* src/hd-incoming-event-window.c
	  (hd_incoming_event_window_update_time): Use ngettext for plural
	  translations.

	* src/test-notifications.py (emit_notification): update test.

	* debian/changelog: Update.

2009-07-01  Aapo Kojo <aapo.kojo@nokia.com>

	Released 0.3.37
	
	* configure.ac: 0.3.37

2009-06-30  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-notification-manager.c (hd_notification_manager_load_row,
	  hd_notification_manager_db_load, hd_notification_manager_db_exec,
	  hd_notification_manager_db_create): Fix wrong g_free of sqlite3
	  errors. FIx crashes.

2009-06-30  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#122957 - There is warning message in console when engine
	cannot load bookmark file

	* src/hd-bookmark-manager.c
	  (hd_bookmark_manager_monitor_bookmark_files): Do not use operator
	  bookmark file.

	* debian/changelog: Update.

2009-06-29  Aapo Kojo <aapo.kojo@nokia.com>

	Released 0.3.36

	* configure.ac: 0.3.36

2009-06-29  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#110233 - Possible memory leak in hildon-home

	* src/hd-incoming-event-window.c (hd_incoming_event_window_finalize):
	Fix leaking prov->destination.

	* src/hd-notification-manager.c (hd_notification_manager_db_prepare):
	Fix leaking sqlite prepared statements. Really reuse them.
	  (hd_notification_manager_notify): Fix leaking actions_copy.

	* debian/changelog: Update.

2009-06-29  Jan Arne Petersen  <jpetersen@openismus.com>
